--- a/src/components/rdComponent/styles.css
+++ b/src/components/rdComponent/styles.css
@@ -130,7 +130,7 @@
   height: 40px;
   align-content: center;
   text-align: center;
-  font-size: 1rem;
+  font-size: 14px;
 }
 
 .clc-btn{
